# Relic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/Include/: Audio.hpp  Camera2D.hpp  Font.hpp  Keyboard.hpp  Math.hpp  Renderer.hpp  Result.hpp  Shader.hpp  Shape.hpp  System.hpp  Texture.hpp  Window.hpp
Engine/Source/: Audio.cpp  Camera2D.cpp  Font.cpp  Keyboard.cpp  Renderer.cpp  Shader.cpp  Shape.cpp  System.cpp  Texture.cpp  Window.cpp
Engine/include/: Actor.hpp  Font.hpp  Keyboard.hpp  Math.hpp  Shader.hpp  Texture.hpp  Window.hpp
Engine/src/: Camera2D.cpp  Font.cpp  Keyboard.cpp  Keyboard.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Game/: main.cpp
Game/Include/: Actor.hpp  Player.hpp  Spritesheet.h  Spritesheet.hpp
Game/Shaders/: font.frag  gradient.frag  gradient.vert  shape.frag  shape.vert
Game/Source/: Player.cpp  Spritesheet.cpp
Game/shaders/: font.vert  texture.frag  texture.vert
